--- a/tabla.html
+++ b/tabla.html
@@ -1,7 +1,14 @@
 <!DOCTYPE html>
 <html lang="es-ES">
-<table border="2">
-        
+<head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Tablas</title>
+</head>  
+
+<body>
+    <table border="3">
+
     <th colspan="4">Sugerencia de compra</th>
     <tr>   
         <th>ID PRODUCTO</th>
@@ -15,3 +22,6 @@
         <td>Altus</td>
         <td>253 euros</td>
     </tr>
+    </table>
+</body>
+</html>      
